fucking shit hw-08

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
         <nav class="nav">
             <a class="nav-logo link" lang="en" href="index.html"><span class="nav-logo__span">Web</span>Studio</a>
 
-            <button type="button" class="nav__button is-open" data-menu-button aria-expanded="false" aria-controls="mobile-menu">
+            <button type="button" class="nav__button is-open" data-menu-button aria-expanded="true" aria-controls="mobile-menu">
                 <svg width="19px" height="19px" aria-label="переключатель мобильного меню">
-                    <use class="icon-close" href="./images/sprite.svg#icon-close_24px"> </use>
+                    
                     <use class="icon-menu" href="./images/sprite.svg#icon-menu_24px"> </use>
+                    <use class="icon-close" href="./images/sprite.svg#icon-close_24px"> </use>
                 </svg>
             </button>
 
@@ -51,6 +52,13 @@
                         <use href="./images/sprite.svg#smartphone"></use>
                     </svg>+38 096 111 11 11</a>
             </li>
+        </ul>
+
+        <ul class="social-menu list">
+            <li class="social-menu__item"><a class="social-menu__link link current" href="#">Instagram</a></li>
+            <li class="social-menu__item"><a class="social-menu__link link current" href="#">Twitter</a></li>
+            <li class="social-menu__item"><a class="social-menu__link link current" href="#">Facebook</a></li>
+            <li class="social-menu__item"><a class="social-menu__link link current" href="#">LinkedIn</a></li>
         </ul>
 
         </div>
