--- a/portfolio.html
+++ b/portfolio.html
@@ -53,6 +53,13 @@
                                 </svg>+38 096 111 11 11</a>
                         </li>
                     </ul>
+
+                    <ul class="social-menu list">
+                        <li class="social-menu__item"><a class="social-menu__link link current" href="#">Instagram</a></li>
+                        <li class="social-menu__item"><a class="social-menu__link link current" href="#">Twitter</a></li>
+                        <li class="social-menu__item"><a class="social-menu__link link current" href="#">Facebook</a></li>
+                        <li class="social-menu__item"><a class="social-menu__link link current" href="#">LinkedIn</a></li>
+                    </ul>
     
                 </div>
             </nav>
