Super finish of 8-HW

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <nav class="nav">
             <a class="nav-logo link" lang="en" href="index.html"><span class="nav-logo__span">Web</span>Studio</a>
 
-            <button type="button" class="nav__button is-open" data-menu-button aria-expanded="true" aria-controls="mobile-menu">
+            <button type="button" class="nav__button " data-menu-button aria-expanded="true" aria-controls="mobile-menu">
                 <svg width="19px" height="19px" aria-label="переключатель мобильного меню">
                     
                     <use class="icon-menu" href="./images/sprite.svg#icon-menu_24px"> </use>
@@ -33,7 +33,7 @@
                 </svg>
             </button>
 
-            <div class="nav__mobile-menu is-open" id="mobile-menu" data-menu>
+            <div class="nav__mobile-menu " id="mobile-menu" data-menu>
 
             <ul class="nav-menu list">
                 <li class="nav-menu__item"><a class="nav-menu__link link current" href="index.html">Студия</a></li>
